data/derived/comb/progs/unify/prog6646.ml.out
Characters 44-49:
  let _ = assoc([1,1],"a",[("ca",[1,2]);("a",[2,2,3])]);;
                                              ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int * int
